Removed the `overflow:auto` from the CSS and added a fix for Firefox and Chromium.

--- a/main/webapp/modules/core/styles/project/facets.less
+++ b/main/webapp/modules/core/styles/project/facets.less
@@ -143,13 +143,13 @@ li.facet-state-minimize a.facet-title-minimize:hover {
   }
 
 .facet-body-scrollable {
-  overflow: auto;
   max-height: 17em;
   padding-bottom: 8px;
   background: url(../../images/facet-resize-handle.png) center bottom no-repeat;
   }
 
 .facet-body-inner {
+  max-height: 17em;
   background: #fff;
   }
   
